Refactor app structure: remove capacitor.config.ts, update dependencies in package.json, and implement Google authentication in App.vue and LoginView.vue. Enhance routing with BottomNavigation and add new OnBoarding page. Update HomeView with a carousel and improved layout.

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="title_activity_main">3D Cake Maker</string>
     <string name="package_name">com.tgsolutions.cakemaker</string>
     <string name="custom_url_scheme">com.tgsolutions.cakemaker</string>
+    <string name="server_client_id">843645413677-kkvo0ccvqdacfk1u1vpicp3eokv8h812.apps.googleusercontent.com</string>
 </resources>
